ProjectAssistant/Envoy/front-envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 443
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.file_access_log
                    config:
                      path: "/var/log/access.log"
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/oauth2/"
                          route: {
                            cluster: authentication
                          }
                        - match:
                            prefix: "/be/"
                          route: {
                            prefix_rewrite: "/",
                            cluster: management
                          }
                        - match:
                            prefix: "/auth/"
                          route: {
                            prefix_rewrite: "/",
                            cluster: authentication
                          }
                        - match:
                            prefix: "/home"
                          route: {
                            prefix_rewrite: "/",
                            cluster: frontend
                          }
                        - match:
                            prefix: "/"
                          route: {
                            cluster: frontend
                          }
                http_filters:
                  - name: envoy.router
                    typed_config: {}
          tls_context:
            common_tls_context:
              tls_certificates:
                - certificate_chain:
                    filename: "/certs/projectAssistant.crt"
                  private_key:
                    filename: "/certs/projectAssistant.key"
  clusters:
    - name: frontend
      connect_timeout: 60s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: 35.159.53.178
            port_value: 9005
    - name: management
      connect_timeout: 60s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: 54.93.85.3
            port_value: 9001
    - name: authentication
      connect_timeout: 60s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: 35.159.53.178
            port_value: 9002
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.api.v2.auth.UpstreamTlsContext
          common_tls_context:
            tls_certificates:
              certificate_chain: { "filename": "/certs/projectAssistant.crt" }
              private_key: { "filename": "/certs/projectAssistant.key" }
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
